--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Your Name <you@example.com>"]
 python = ">=3.10.0,<3.11"
 replit = "^3.2.4"
 Flask = "^2.1.3"
+pandas = "^2.0.1"
+openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
