--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ replit = "^3.2.4"
 Flask = "^2.1.3"
 pandas = "^2.0.1"
 openpyxl = "^3.1.2"
+lxml = "^4.9.2"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
